# esp32-freertos-platform

./: .gitignore  CMakeLists.txt  Changelog.md
.github/: build.yml
.github/workflow/: Build.yml
.github/workflows/: Build.yml
app/: CMakeLists.txt  README.md
bsp/: README.md  bsp_board.c  bsp_board.h  bsp_pins.h
cmake/: README..md
docker/: Dockerfile
drivers/: README.md
drivers/led/: led.c  led.h
include/: README.md
main/: CMakeLists.txt  main.c  system_init.c  system_init.h  task_manager.c  task_manager.h
services/: README.md
tasks/: connectivity_task.c  connectivity_task.h  control_task.c  control_task.h  heartbeat_task.c  heartbeat_task.h  sensor_task.c  sensor_task.h  ui_task.c  ui_task.h
